# rsomics-normaltest

./: Cargo.toml  README.md
benches/: normaltest.rs
src/: cli.rs  dagostino.rs  igamc.rs  lib.rs  ndtr.rs
tests/: compat.rs
tests/golden/: expected.tsv  heavytail.tsv  infval.tsv  large.tsv  normalish.tsv  rightskew.tsv  uniform.tsv
